--- a/Day3/new.html
+++ b/Day3/new.html
@@ -6,13 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <!--Block line Elements-->
-    <h1>Welcome to My page</h1>
-    <p>This is my paragraph content present in this page</p>
+    <!-- Block line Elements -->
+    <!-- <h1>Welcome to My page</h1> -->
+    <!-- <p>This is my paragraph content present in this page</p> -->
     
     <!--Inline Element  -->
-    <span>1)Vamsi </span>
+    <!-- <span>1)Vamsi </span>
     <span>2)krishna </span>
-    <span>3)Karanam Vamsi Krishna</span>
+    <span>3)Karanam Vamsi Krishna</span> -->
+
+    <!--Hedaing tag-->
+    <h1>Heading 1</h1>
+    <!--linebreak tag-->
+    <h1>Heading 2 <br>linebreak tag</h1>
+    <!--paragraph tag-->
+    <p>Paragraph</p>
+    <!--HorizentalLine tag-->
+    <h1>Horozental Line<hr></h1>
+    
 </body>
 </html>
