--- a/Day3/new.html
+++ b/Day3/new.html
@@ -23,6 +23,25 @@
     <p>Paragraph</p>
     <!--HorizentalLine tag-->
     <h1>Horozental Line<hr></h1>
+    <!--NoN breaking Space keyword is &nbsp;-->
+    <p>This&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; is non breaking Space</p>
+<!--List -->
+<ul>
+    <!-- Unorder List -->
+     <p>Unorder List</p>
+    <li>list 1</li>
+    <li>list 2</li>
+    <li>list 3</li>
+    <li>list 4</li>
+</ul>
+<ol>
+    <!-- ordered list -->
+     <p>ordered list</p>
+     <li>list 1</li>
+     <li>list 2</li>
+     <li>list 3</li>
+     <li>list 4</li>
+</ol>
     
 </body>
 </html>
