--- a/Day3/new.html
+++ b/Day3/new.html
@@ -17,6 +17,11 @@
 
     <!--Hedaing tag-->
     <h1>Heading 1</h1>
+    <h2>Heading 1</h2>
+    <h3>Heading 1</h3>
+    <h4>Heading 1</h4>
+    <h5>Heading 1</h5>
+    <h6>Heading 1</h6>
     <!--linebreak tag-->
     <h1>Heading 2 <br>linebreak tag</h1>
     <!--paragraph tag-->
@@ -34,7 +39,46 @@
     <li>list 3</li>
     <li>list 4</li>
 </ul>
-<ol>
+<ul type="circle">
+    <!-- Unorder List -->
+     <p>Unorder List</p>
+    <li>list 1</li>
+    <li>list 2</li>
+    <li>list 3</li>
+    <li>list 4</li>
+</ul>
+<ul type="square">
+    <!-- Unorder List -->
+     <p>Unorder List</p>
+    <li>list 1</li>
+    <li>list 2</li>
+    <li>list 3</li>
+    <li>list 4</li>
+</ul>
+<ol type="I">
+    <!-- ordered list -->
+     <p>ordered list</p>
+     <li>list 1</li>
+     <li>list 2</li>
+     <li>list 3</li>
+     <li>list 4</li>
+</ol>
+<ol type="i">
+    <!-- ordered list -->
+     <p>ordered list</p>
+     <li>list 1</li>
+     <li>list 2</li>
+     <li>list 3</li>
+     <li>list 4</li>
+</ol><ol type="A">
+    <!-- ordered list -->
+     <p>ordered list</p>
+     <li>list 1</li>
+     <li>list 2</li>
+     <li>list 3</li>
+     <li>list 4</li>
+</ol>
+<ol type="a">
     <!-- ordered list -->
      <p>ordered list</p>
      <li>list 1</li>
