--- a/Day3/new.html
+++ b/Day3/new.html
@@ -86,6 +86,16 @@
      <li>list 3</li>
      <li>list 4</li>
 </ol>
-    
+    <!-- Formatting Tags -->
+     <p>in italic <em>This is my paragraph .</em></p>
+     <p>text bold <strong>This is my paragraph .</strong></p>
+     <p>underline <u>This is my paragraph .</u></p>
+     <p>commonly underline <ins>This is my paragraph .</ins></p>
+     <p>delete text with a strike through<del>This is my paragraph .</del></p>
+     <p>highlight the text<mark>This is my paragraph .</mark></p>
+     <p>favor of delete<strike>This is my paragraph .</strike></p>
+     <p> often italic<cite>This is my paragraph .</cite></p>
+     <p>is used fro long quotations<blockqute>This is my paragraph .</blockqute></p>
+     <p>inline quotations often displayed in quotation <q>This is my paragraph .</q></p>
 </body>
 </html>
