--- a/Day3/Tags.html
+++ b/Day3/Tags.html
@@ -95,7 +95,7 @@
      <p>highlight the text<mark>This is my paragraph .</mark></p>
      <p>favor of delete<strike>This is my paragraph .</strike></p>
      <p> often italic<cite>This is my paragraph .</cite></p>
-     <p>is used fro long quotations<blockqute>This is my paragraph .</blockqute></p>
+     <p>is used for long quotations<blockqute>This is my paragraph .</blockqute></p>
      <p>inline quotations often displayed in quotation <q>This is my paragraph .</q></p>
 </body>
 </html>
